--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
       , "npm":  "1.2.x"
     }
   , "scripts": {
-      "start": "NODE_ENV=development ./node_modules/.bin/nodemon server.js",
-      "test": "NODE_ENV=test ./node_modules/.bin/mocha --reporter spec test/test-*.js"
+      "start": "./node_modules/.bin/nodemon server.js",
+      "test": "./node_modules/.bin/mocha --reporter spec test/test-*.js"
     }
   , "dependencies": {
       "express": "latest"
+    , "compression": "*"
+    , "body-parser": "*"
+    , "cookie-parser": "*"
+    , "express-session":"*"
+    , "method-override":"*"
+    , "static-favicon":"*"
+    , "connect":"*"
     , "jade": "latest"
-    , "mongoose": "latest"
-    , "connect-mongo": "latest"
-    , "connect-flash": "latest"
+    , "nano": "*"
+    , "cradle": "*"
+    , "connect-flash": "*"
     , "passport": "latest"
     , "passport-local": "latest"
     , "passport-facebook": "latest"
